--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Menu Demo</title>
+    <link rel="stylesheet" href="css/styleDemo.css">
+</head>
+<body>
+<div class="menu clearfix">
+    <ul>
+        <li> <a> Trang chủ</a></li>
+        <li> <a> Giới thiệu</a></li>
+        <li> <a> Sản phẩm</a></li>
+        <li> <a> Tin tức</a></li>
+        <li> <a> Liên hệ</a></li>
+    </ul>
+</div>
+
+</body>
+</html>
